Thu Jun 16 07:19:26 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/ContentFilteredTopic/StateListener/Sender/CFTLS_Test_Sender_exec.cpp:
          Fixed memory leak in this test

Wed Jun 15 13:38:57 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/TypeSupport.h:
        * connectors/dds4ccm/impl/ndds/TypeSupport.cpp:
          Optimized management of DomainParticipants and type-factory combinations.

Wed Jun 15 07:30:00 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MemLeakDetection/TypeRegistration/Base/TypeRegistration_Test_Base.idl:
          Fixed error in openDDS.

Tue Jun 14 13:36:00 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/DAnCE/Executor-Destructor/Exec_Dest_Status_export.h:

          Fuzz.

Tue Jun 14 12:03:17 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.h:
          Fixed compile issue on openDDS.

Tue Jun 14 08:46:29 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Common/I2C_Shapes_Common.cpp:
          Coverity : checked return value of register_type.

Mon Jun 13 09:09:56 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MemLeakDetection/TypeRegistration/descriptors/Plan.cdp:
          Fixed runtime issue due to renaming action.

Sat Jun 11 08:18:19 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/TypeSupport/main.cpp:
          Fuzz: no ending new line at the end of the file.

Sat Jun 11 08:17:03 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MemLeakDetection/TypeRegistration/Base/TypeRegistration_Test_Base.mpc:
        * connectors/dds4ccm/tests/MemLeakDetection/TypeRegistration/Component/TypeRegistration_Test_Component.mpc: