@@ -1,3 +1,11 @@
+Thu Jun 16 08:36:24 UTC 2011  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/ndds/TypeSupport.cpp:
+          Fixed runtime issues in close.
+
+        * connectors/dds4ccm/tests/TypeSupport/main.cpp:
+          Expanded test with a few other tests.
+
 Thu Jun 16 07:19:26 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/tests/ContentFilteredTopic/StateListener/Sender/CFTLS_Test_Sender_exec.cpp:
